add qr generation

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ioredis": "^5.4.1",
     "mongoose": "^8.4.0",
     "puppeteer": "^22.10.0",
+    "qrcode": "^1.5.4",
     "socket.io": "^4.7.5",
     "uuid": "^9.0.1",
     "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#main",
@@ -26,6 +27,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
+    "@types/qrcode": "^1.5.6",
     "@types/uuid": "^9.0.8",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
